Feat: Add more function to users controller
